nav bar alignment fix

--- a/styles1.scss
+++ b/styles1.scss
@@ -140,10 +140,14 @@ body{
       display: none;
     }
 
-    .nav-right > ul {
-      justify-content: space-around;
-      width: 100%;
-      padding: 0 4%;
+    .nav-right {
+      margin: 0;
+
+      ul {
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 4%;
+      }
     }
   }
 }
@@ -404,9 +408,9 @@ body{
   justify-content: center;
   align-items: center;
   color: $primary-text-color;
-  font-size: 26px;
+  font-size: 28px;
   padding-bottom: 10px;
-  margin: 10px;
+  margin: 45px 10px 10px 10px;
   position: relative;
 }
 
@@ -494,6 +498,13 @@ body{
     transition: transform 0.2s;
   }  
 }
+
+@media only screen and (max-width: 350px){
+  .other-projects{
+    font-size: 25px;
+  }
+}
+
 @media only screen and (min-width: 1000px){
   .text{
     &__button{
